# ml_handling_imbalanced_data

./: README.md  main.py  pyproject.toml
data/: clean_data.csv
src/: README.md  create_model.ipynb  eda.ipynb
